// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders comment authored by current user 1`] = `
<div class="comment-item">
  <div class="comment-item__header">
    <comment-profile-stub author="[object Object]" comment="[object Object]" class="comment-item__profile"></comment-profile-stub>
    <div class="comment-item__datetime">
      a few seconds ago
    </div>
    <div trigger="manual" placement="right" popover-class="comment-item__overlay comment-item__overlay--resolve"><button class="comment-item__overlay__item">
        Edit Comment
      </button> <button class="comment-item__overlay__item">
        Delete Comment
      </button> <button class="comment-item__overlay__item">
        Delete Thread
      </button></div>
    <div class="comment-item__resolve"><img src="/static/imgs/resolve-gray-icon.svg"></div>
  </div>
  <div class="comment-item__body">
    <div class="comment-item__non-edit">comment</div>
    <div class="comment-item__edit">
      <comment-edit-box-stub value="" placeholder="Reply" minheight="15" maxheight="350" class="comment-item__edit-textarea"></comment-edit-box-stub>
    </div>
  </div>
</div>
`;

exports[`renders comment authored by other user 1`] = `
<div class="comment-item">
  <div class="comment-item__header">
    <comment-profile-stub author="[object Object]" comment="[object Object]" class="comment-item__profile"></comment-profile-stub>
    <div class="comment-item__datetime">
      a few seconds ago
    </div>
    <div trigger="manual" placement="right" popover-class="comment-item__overlay comment-item__overlay--resolve"><button disabled="disabled" class="comment-item__overlay__item">
        Edit Comment
      </button> <button disabled="disabled" class="comment-item__overlay__item">
        Delete Comment
      </button> <button disabled="disabled" class="comment-item__overlay__item">
        Delete Thread
      </button></div>
    <div class="comment-item__resolve"><img src="/static/imgs/resolve-gray-icon.svg"></div>
  </div>
  <div class="comment-item__body">
    <div class="comment-item__non-edit">comment</div>
    <div class="comment-item__edit">
      <comment-edit-box-stub value="" placeholder="Reply" minheight="15" maxheight="350" class="comment-item__edit-textarea"></comment-edit-box-stub>
    </div>
  </div>
</div>
`;

exports[`renders comment authored when viewing as someone else entirely 1`] = `
<div class="comment-item">
  <div class="comment-item__header">
    <comment-profile-stub author="[object Object]" comment="[object Object]" class="comment-item__profile"></comment-profile-stub>
    <div class="comment-item__datetime">
      a few seconds ago
    </div>
    <div trigger="manual" placement="right" popover-class="comment-item__overlay comment-item__overlay--resolve"><button disabled="disabled" class="comment-item__overlay__item">
        Edit Comment
      </button> <button disabled="disabled" class="comment-item__overlay__item">
        Delete Comment
      </button> <button disabled="disabled" class="comment-item__overlay__item">
        Delete Thread
      </button></div>
    <div class="comment-item__resolve"><img src="/static/imgs/resolve-gray-icon.svg"></div>
  </div>
  <div class="comment-item__body">
    <div class="comment-item__non-edit">comment</div>
    <div class="comment-item__edit">
      <comment-edit-box-stub value="" placeholder="Reply" minheight="15" maxheight="350" class="comment-item__edit-textarea"></comment-edit-box-stub>
    </div>
  </div>
</div>
`;

exports[`shows edit mode when you click edit 1`] = `
<div class="comment-item">
  <div class="comment-item__header">
    <comment-profile-stub author="[object Object]" comment="[object Object]" class="comment-item__profile"></comment-profile-stub>
    <div class="comment-item__edit-actions">
      <secondary-button-stub size="small">
        Cancel
      </secondary-button-stub>
      <positive-button-stub disabled="true" size="small">
        Save
      </positive-button-stub>
    </div>
  </div>
  <div class="comment-item__body comment-item__body--editing">
    <div class="comment-item__non-edit">comment</div>
    <div class="comment-item__edit">
      <comment-edit-box-stub value="comment" placeholder="Reply" minheight="15" maxheight="350" class="comment-item__edit-textarea" focus="true"></comment-edit-box-stub>
    </div>
  </div>
</div>
`;
